--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/react-router-dom": "5.1.1",
+    "antd": "^5.8.3",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "i18next": "^21.8.10",
