--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "5.1.1",
     "antd": "^5.8.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.3.1",
     "cookie": "^0.5.0",
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
