--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.2.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "@mui/styles": "^5.10.3",
@@ -30,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.45.4",
     "react-i18next": "^11.17.2",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.2",
@@ -38,7 +40,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "swr": "^1.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
