--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "@mui/styles": "^5.10.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "antd": "^5.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.3.1",
+    "connected-react-router": "^6.9.3",
     "cookie": "^0.5.0",
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -25,14 +27,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.45.4",
     "react-i18next": "^11.17.2",
     "react-redux": "^8.0.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "5.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3",
     "swr": "^1.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
