--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "swr": "^1.3.0",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
