--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "swr": "^1.3.0",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19",
     "yup": "^1.2.0"
   },
   "scripts": {
