--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "notistack": "^2.0.5",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
     "react-i18next": "^11.17.2",
+    "react-moment": "^1.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.2",
     "react-router-config": "^5.1.1",
